[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Buttons/TriviaQuestionBtn.png" type="Texture" id=1]
[ext_resource path="res://Assets/Buttons/LeaderboardBtn.png" type="Texture" id=2]
[ext_resource path="res://Assets/Title/Title.png" type="Texture" id=3]
[ext_resource path="res://main_menu/buttons/TriviaQuestionButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://main_menu/buttons/GameSectionButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://main_menu/buttons/LeaderboardButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://main_menu/buttons/SettingsButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://main_menu/buttons/LearningSectionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Buttons/GameSectionBtn.png" type="Texture" id=9]
[ext_resource path="res://Assets/Buttons/SettingsBtn.png" type="Texture" id=10]
[ext_resource path="res://Assets/Buttons/LearningSectionBtn.png" type="Texture" id=11]
[ext_resource path="res://main_menu/fade_in/FadeIn.tscn" type="PackedScene" id=12]
[ext_resource path="res://main_menu/main_menu_screen.gd" type="Script" id=13]
[ext_resource path="res://Assets/Images/Background/Background 2.png" type="Texture" id=14]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="Menu"]
margin_right = 1180.0
margin_bottom = 289.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="UpperButton" type="HBoxContainer" parent="Menu"]
margin_top = 293.0
margin_right = 1180.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonIcon1" type="VBoxContainer" parent="Menu/UpperButton"]
margin_right = 360.0
margin_bottom = 211.0
size_flags_horizontal = 2

[node name="LearningSectionPng" type="TextureRect" parent="Menu/UpperButton/ButtonIcon1"]
margin_left = 117.0
margin_right = 243.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 11 )

[node name="Buttons" type="VBoxContainer" parent="Menu/UpperButton/ButtonIcon1"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LearningSectionButton" parent="Menu/UpperButton/ButtonIcon1/Buttons" instance=ExtResource( 8 )]
margin_top = 10.0
margin_bottom = 70.0
scene_to_load = "res://learning_section/LearningSectionPage1.tscn"

[node name="ButtonIcon2" type="VBoxContainer" parent="Menu/UpperButton"]
margin_left = 410.0
margin_right = 770.0
margin_bottom = 211.0
size_flags_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TriviaQuestionPng" type="TextureRect" parent="Menu/UpperButton/ButtonIcon2"]
margin_left = 117.0
margin_right = 243.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="Menu/UpperButton/ButtonIcon2"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TriviaQuestionButton" parent="Menu/UpperButton/ButtonIcon2/Buttons" instance=ExtResource( 4 )]
margin_top = 10.0
margin_bottom = 70.0
scene_to_load = "res://trivia_question/TriviaQuestions.tscn"

[node name="ButtonIcon3" type="VBoxContainer" parent="Menu/UpperButton"]
margin_left = 820.0
margin_right = 1180.0
margin_bottom = 211.0

[node name="GameSectionPng" type="TextureRect" parent="Menu/UpperButton/ButtonIcon3"]
margin_left = 117.0
margin_right = 242.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 9 )

[node name="Buttons" type="VBoxContainer" parent="Menu/UpperButton/ButtonIcon3"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 211.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="GameSectionButton" parent="Menu/UpperButton/ButtonIcon3/Buttons" instance=ExtResource( 5 )]
margin_top = 10.0
margin_bottom = 70.0
scene_to_load = "res://game_section/GameMenu.tscn"

[node name="LowerButton" type="HBoxContainer" parent="Menu"]
margin_top = 508.0
margin_right = 1180.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonIcon4" type="VBoxContainer" parent="Menu/LowerButton"]
margin_left = 228.0
margin_right = 588.0
margin_bottom = 212.0
alignment = 1

[node name="LeaderboardPng" type="TextureRect" parent="Menu/LowerButton/ButtonIcon4"]
margin_left = 117.0
margin_right = 243.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="Menu/LowerButton/ButtonIcon4"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="LeaderboardButton" parent="Menu/LowerButton/ButtonIcon4/Buttons" instance=ExtResource( 6 )]
margin_top = 11.0
margin_bottom = 71.0

[node name="ButtonIcon5" type="VBoxContainer" parent="Menu/LowerButton"]
margin_left = 592.0
margin_right = 952.0
margin_bottom = 212.0
alignment = 1

[node name="SettingsPng" type="TextureRect" parent="Menu/LowerButton/ButtonIcon5"]
margin_left = 117.0
margin_right = 243.0
margin_bottom = 126.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 10 )

[node name="Buttons" type="VBoxContainer" parent="Menu/LowerButton/ButtonIcon5"]
margin_top = 130.0
margin_right = 360.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="SettingsButton" parent="Menu/LowerButton/ButtonIcon5/Buttons" instance=ExtResource( 7 )]
margin_top = 11.0
margin_bottom = 71.0

[node name="FadeIn" parent="." instance=ExtResource( 12 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
